<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logobrain"
                android:layout_marginTop="15dp"
                android:scaleType="fitCenter"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="24sp"
                android:text="@string/reminder_name"
                android:textAlignment="center"
                android:textColor="@color/dusty_rose"
                android:layout_marginTop="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/name"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/when"
                android:textAlignment="center"
                android:textColor="@color/dusty_rose"
                android:layout_marginTop="20dp"/>

             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_marginLeft="140dp"
                 android:layout_marginRight="140dp"
                 android:stretchColumns="0"
                 android:layout_marginTop="20dp"
                 android:layout_height="wrap_content">

                 <TableRow
                        android:layout_height="wrap_content"
                        android:layout_width="50dp">
                     <TextView
                         android:layout_width="match_parent"
                         android:textSize="20sp"
                         android:layout_height="wrap_content"
                         android:text="@string/monday"
                         />
                     <CheckBox
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/mondayCheck"/>
                 </TableRow>
                 <TableRow
                     android:layout_height="wrap_content"
                     android:layout_width="50dp">
                     <TextView
                         android:layout_width="match_parent"
                         android:textSize="20sp"
                         android:layout_height="wrap_content"
                         android:text="@string/tuesday"
                         />
                     <CheckBox
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/tuesday"/>
                 </TableRow>
                 <TableRow
                     android:layout_height="wrap_content"
                     android:layout_width="50dp">
                     <TextView
                         android:layout_width="match_parent"
                         android:textSize="20sp"
                         android:layout_height="wrap_content"
                         android:text="@string/wednesday"
                         />
                     <CheckBox
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/wednesdayCehck"/>
                 </TableRow>
                 <TableRow
                     android:layout_height="wrap_content"
                     android:layout_width="50dp">
                     <TextView
                         android:layout_width="match_parent"
                         android:textSize="20sp"
                         android:layout_height="wrap_content"
                         android:text="@string/thursday"
                         />
                     <CheckBox
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/thursdayCheck"/>
                 </TableRow>
                 <TableRow
                     android:layout_height="wrap_content"
                     android:layout_width="50dp">
                     <TextView
                         android:layout_width="match_parent"
                         android:textSize="20sp"
                         android:layout_height="wrap_content"
                         android:text="@string/friday"
                         />
                     <CheckBox
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/fridayCheck"/>
                 </TableRow>
                 <TableRow
                     android:layout_height="wrap_content"
                     android:layout_width="50dp">
                     <TextView
                         android:layout_width="match_parent"
                         android:textSize="20sp"
                         android:layout_height="wrap_content"
                         android:text="@string/saturday"
                         />
                     <CheckBox
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/saturdayCheck"/>
                 </TableRow>
                 <TableRow
                     android:layout_height="wrap_content"
                     android:layout_width="50dp">
                     <TextView
                         android:layout_width="match_parent"
                         android:textSize="20sp"
                         android:layout_height="wrap_content"
                         android:text="@string/sunday"
                         />
                     <CheckBox
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/sundayCheck"/>
                 </TableRow>

             </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="24sp"
                android:text="@string/time"
                android:textAlignment="center"
                android:textColor="@color/dusty_rose"
                android:layout_marginTop="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/time"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dusty_rose"
                android:text="@string/done"
                android:layout_gravity="center"
                />
        </LinearLayout>




    </ScrollView>
</LinearLayout>

